--- a/css/awsm-timeline.css
+++ b/css/awsm-timeline.css
@@ -24,8 +24,55 @@ Primary style
   height: auto;
 }
 
+#bg-video {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  bottom: auto;
+  right: auto;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -100;
+  background-image: url(../img/tm-astro-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav h2 {
+  float: center;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.container-fluid {
+  max-width: 1860px;
+}
+
 .awsm-container {
-  background-image: linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
   max-width: 100%;
   margin: 0 auto;
   padding: 10px 15px 100px 15px;
@@ -338,7 +385,7 @@ body {
 }
 
 .awsm-timeline-style-1 .awsm-date {
-  color: black;
+  color: white;
   margin-bottom: 10px;
   display: block;
 }
